--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-/vendor/bundle/ruby/2.6.0
-/public
+/vendor/*
+/public/*
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
